--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@
             <h2>Conversor de Unidades</h2>
         </div>
 
-        <!-- Contenido todo en una sola página -->
         <div class="my-4">
             <!-- Longitud -->
             <div class="converter mb-4">
                 <h4>📏 Conversión de Longitud</h4>
                 <div class="row g-2 align-items-center">
-                    <div class="col-md-3">
+                    <div class="col-12 col-md-3">
                         <select class="form-select" id="longitudFrom">
                             <option value="Metro">Metro</option>
                             <option value="Kilómetro">Kilómetro</option>
@@ -30,8 +29,8 @@
                             <option value="Milímetro">Milímetro</option>
                         </select>
                     </div>
-                    <div class="col-auto">=&gt;</div>
-                    <div class="col-md-3">
+                    <div class="col-auto d-none d-md-block">=&gt;</div>
+                    <div class="col-12 col-md-3">
                         <select class="form-select" id="longitudTo">
                             <option value="Metro">Metro</option>
                             <option value="Kilómetro">Kilómetro</option>
@@ -39,10 +38,10 @@
                             <option value="Milímetro">Milímetro</option>
                         </select>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-12 col-md-3">
                         <input type="number" id="longitudInput" class="form-control" placeholder="Cantidad" />
                     </div>
-                    <div class="col-md-2">
+                    <div class="col-12 col-md-2">
                         <div class="output-box" id="longitudOutput">0</div>
                     </div>
                 </div>
@@ -54,25 +53,25 @@
             <div class="converter mb-4">
                 <h4>⚖️ Conversión de Peso</h4>
                 <div class="row g-2 align-items-center">
-                    <div class="col-md-3">
+                    <div class="col-12 col-md-3">
                         <select class="form-select" id="pesoFrom">
                             <option value="Kilogramo">Kilogramo</option>
                             <option value="Gramo">Gramo</option>
                             <option value="Libra">Libra</option>
                         </select>
                     </div>
-                    <div class="col-auto">=&gt;</div>
-                    <div class="col-md-3">
+                    <div class="col-auto d-none d-md-block">=&gt;</div>
+                    <div class="col-12 col-md-3">
                         <select class="form-select" id="pesoTo">
                             <option value="Kilogramo">Kilogramo</option>
                             <option value="Gramo">Gramo</option>
                             <option value="Libra">Libra</option>
                         </select>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-12 col-md-3">
                         <input type="number" id="pesoInput" class="form-control" placeholder="Cantidad" />
                     </div>
-                    <div class="col-md-2">
+                    <div class="col-12 col-md-2">
                         <div class="output-box" id="pesoOutput">0</div>
                     </div>
                 </div>
@@ -84,25 +83,25 @@
             <div class="converter mb-4">
                 <h4>🌡️ Conversión de Temperatura</h4>
                 <div class="row g-2 align-items-center">
-                    <div class="col-md-3">
+                    <div class="col-12 col-md-3">
                         <select class="form-select" id="temperaturaFrom">
                             <option value="Celsius">Celsius</option>
                             <option value="Fahrenheit">Fahrenheit</option>
                             <option value="Kelvin">Kelvin</option>
                         </select>
                     </div>
-                    <div class="col-auto">=&gt;</div>
-                    <div class="col-md-3">
+                    <div class="col-auto d-none d-md-block">=&gt;</div>
+                    <div class="col-12 col-md-3">
                         <select class="form-select" id="temperaturaTo">
                             <option value="Celsius">Celsius</option>
                             <option value="Fahrenheit">Fahrenheit</option>
                             <option value="Kelvin">Kelvin</option>
                         </select>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-12 col-md-3">
                         <input type="number" id="temperaturaInput" class="form-control" placeholder="Cantidad" />
                     </div>
-                    <div class="col-md-2">
+                    <div class="col-12 col-md-2">
                         <div class="output-box" id="temperaturaOutput">0</div>
                     </div>
                 </div>
